--- a/character_editor.html
+++ b/character_editor.html
@@ -3,7 +3,7 @@
     <head>
         <title>Stellar Fantacies' Character Editor</title>
         <meta content="Character Editor" property="og:title" />
-        <meta content="Create and edit your character here!" property="og:description" />
+        <meta content="Create and edit your Star wars Stellar Fantacies character here!" property="og:description" />
         <meta content="https://bregalad2.github.io/SWSE-Character-Creator/character_editor.html" property="og:url" />
         <meta content="https://bregalad2.github.io/SWSE-Character-Creator/img/page_1.png" property="og:image" />
         <meta content="#9b96ca" data-react-helmet="true" name="theme-color" />
