--- a/character_editor.html
+++ b/character_editor.html
@@ -76,6 +76,9 @@
                     <label>Weight:</label>
                     <input type="text" id="weightform" name="weightform" onkeyup="save(this);" style="width:40px;">
                     <br>
+                    <label>Your Character's Image URL (optional):</label>
+                    <input type="text" id="portraitform" name="portraitform" onkeyup="save(this);">
+                    <br>
                     <label>Species:</label>
                     <select name="species" id="speciesform" onchange="changespecies();document.getElementById('species-frame').src='https://starwars.fandom.com/wiki/'+this.value">
                         <option value="Near-Human">Near Human</option>
@@ -765,11 +768,12 @@
         </div>
         <div id="pdfdiv" class="main">
             <label class="noprint">Use ^P to print or download!</label>
-<svg width="1000" height="1245" viewBox="0 0 1000 1245" version="1.1" id="svg1" xml:space="preserve" inkscape:version="1.3.2 (091e20e, 2023-11-25)" sodipodi:docname="page_1.svg" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
-<sodipodi:namedview id="namedview1" pagecolor="#ffffff" bordercolor="#000000" borderopacity="0.25" inkscape:showpageshadow="2" inkscape:pageopacity="0.0" inkscape:pagecheckerboard="0" inkscape:deskcolor="#d1d1d1" inkscape:document-units="mm" inkscape:zoom="0.85340482" inkscape:cx="727.08752" inkscape:cy="903.43994" inkscape:window-width="1280" inkscape:window-height="667" inkscape:window-x="0" inkscape:window-y="25" inkscape:window-maximized="0" inkscape:current-layer="layer1" />
-<defs id="defs1"><rect x="516.75358" y="146.4721" width="48.04285" height="26.950867" id="rect189" /></defs>
-<g id="g1" transform="matrix(1,0,0,0.95899054,0,-138.42415)">
-<image xlink:href="img/page_1.png" id="svg_1" height="1585" width="1000" y="2" x="0" style="display:inline" />
+<svg width="1000" height="1245" viewBox="0 0 1000 1245" version="1.1" id="svg5" xml:space="preserve" inkscape:version="1.3.2 (091e20e, 2023-11-25)" sodipodi:docname="page_1.svg" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
+<sodipodi:namedview id="namedview9" pagecolor="#ffffff" bordercolor="#000000" borderopacity="0.25" inkscape:showpageshadow="2" inkscape:pageopacity="0.0" inkscape:pagecheckerboard="0" inkscape:deskcolor="#d1d1d1" inkscape:document-units="mm" inkscape:zoom="0.85340482" inkscape:cx="727.08752" inkscape:cy="903.43994" inkscape:window-width="1280" inkscape:window-height="667" inkscape:window-x="0" inkscape:window-y="25" inkscape:window-maximized="0" inkscape:current-layer="layer1" />
+<defs id="defs9"><rect x="516.75358" y="146.4721" width="48.04285" height="26.950867" id="rect188" /></defs>
+<g id="g9" transform="matrix(1,0,0,0.95899054,0,-138.42415)">
+<image href="img/page_1.png" id="svg_9" height="1585" width="1000" y="2" x="0" style="display:inline" />
+<image href="" id="portrait" height="195" width="205" y="367" x="709" style="display:inline" />
 <text xml:space="preserve" text-anchor="start" font-family="Orbitron" font-size="16px" id="character" y="240.5" x="232" stroke-width="0" stroke="#000000" fill="#000000" />
 <text xml:space="preserve" text-anchor="start" font-family="Orbitron" font-size="16px" id="player" y="240.5" x="491" stroke-width="0" stroke="#000000" fill="#000000" />
 <text xml:space="preserve" text-anchor="start" font-family="Orbitron" font-size="16px" id="classes" y="273.5" x="233" stroke-width="0" stroke="#000000" fill="#000000" />
